<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingViewActivity">

    <Button
        android:id="@+id/button_saveBooking"
        android:layout_width="151dp"
        android:layout_height="60dp"
        android:layout_marginBottom="44dp"
        android:text="@string/save"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/include3"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"></include>

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingHorizontal="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dip"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:weightSum="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:padding="5dip"
                android:text="@string/time"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:weightSum="2" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dip"
                android:text="@tools:sample/date/ddmmyy[0]"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:weightSum="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:padding="5dip"
                android:text="@string/morning"
                android:weightSum="2" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dip"
                android:text="@tools:sample/date/ddmmyy[0]"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:weightSum="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:padding="5dip"
                android:text="@string/afternoon"
                android:weightSum="2" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dip"
                android:text="@tools:sample/date/ddmmyy[2]"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:weightSum="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:padding="5dip"
                android:text="@string/afternoon"
                android:weightSum="2" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dip"
                android:text="@tools:sample/date/ddmmyy[5]"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:weightSum="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:padding="5dip"
                android:text="@string/afternoon"
                android:weightSum="2" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dip"
                android:text="@tools:sample/date/ddmmyy[4]"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:weightSum="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:padding="5dip"
                android:text="@string/morning"
                android:weightSum="2" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dip"
                android:text="@tools:sample/date/ddmmyy[1]"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:weightSum="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:padding="5dip"
                android:text="@string/morning"
                android:weightSum="2" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dip"
                android:text="@tools:sample/date/ddmmyy[2]"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:weightSum="2"
                tools:text="@tools:sample/date/ddmmyy[2]"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:padding="5dip"
                android:text="@string/afternoon"
                android:weightSum="2" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>