<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRequestActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"></include>

    <Button
        android:id="@+id/button_saveRequests"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:text="@string/save"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="368dp"
        android:layout_height="408dp"
        app:layout_constraintBottom_toTopOf="@+id/button_saveRequests"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        app:layout_constraintVertical_bias="0.257">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:padding="5dip"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:weightSum="5" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="start"
                android:padding="5dip"
                android:text="@string/request"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:weightSum="5" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:weightSum="5" />

            <Button
                android:id="@+id/button_request_user_0"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/book"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:weightSum="5"
                app:cornerRadius="10dp"
                app:iconTint="#009688" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:weightSum="5" />

            <Button
                android:id="@+id/button_request_user_1"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/book"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:weightSum="5"
                app:cornerRadius="10dp"
                app:iconTint="#009688" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:weightSum="5" />

            <Button
                android:id="@+id/button_request_user_2"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/book"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:weightSum="5"
                app:cornerRadius="10dp"
                app:iconTint="#009688" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:weightSum="5" />

            <Button
                android:id="@+id/button_request_user_3"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/book"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:weightSum="5"
                app:cornerRadius="10dp"
                app:iconTint="#009688" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:weightSum="5" />

            <Button
                android:id="@+id/button_request_user_4"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/book"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:weightSum="5"
                app:cornerRadius="10dp"
                app:iconTint="#009688" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:weightSum="5" />

            <Button
                android:id="@+id/button_request_user_5"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/book"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:weightSum="5"
                app:cornerRadius="10dp"
                app:iconTint="#009688" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:weightSum="5" />

            <Button
                android:id="@+id/button_request_user_6"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/book"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:weightSum="5"
                app:cornerRadius="10dp"
                app:iconTint="#009688" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />
    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RequestUsers"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button_saveRequests"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:text="@string/RequestUsers" />

</androidx.constraintlayout.widget.ConstraintLayout>